[package]
name = "redis-tls-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25", features = ["tls-rustls", "r2d2", "tokio-rustls-comp", "tls-rustls-insecure"] }
tokio = { version = "1.0", features = ["full"] }
r2d2 = { version = "0.8" }
